# optimized-version

./: .env.deploy.example  .gitignore  DISCORD_WEBHOOK_SETUP.md  README.md  docker-compose.deploy.yml
Backend/: .dockerignore  .gitignore  .gitkeep  DEPLOY.md  Dockerfile  GEMINI.md  README.md  docker-compose.staging.yml  docker-compose.yml  main.py  pyproject.toml
Backend/.claude/commands/: speckit.specify.md
Backend/.specify/memory/: constitution.md
Backend/.specify/templates/: plan-template.md  tasks-template.md
Backend/Spec/: .gitkeep  TODO.md
Backend/Spec/002-interactive-disaster-map/: plan.md  spec.md
Backend/Spec/003-request-management/: spec.md
Backend/Spec/004-volunteer-dispatch/: spec.md
Backend/Spec/005-supply-management/: spec.md
Backend/Spec/Docs/: er-diagram.md  feature-dependency-analysis.md  graphql-api-design.md  (+5 more)
Backend/alembic/: env.py
Backend/app/: main.py
Backend/scripts/: deploy-config.staging.env  deploy.sh  seed_mock_scenarios.sql  seed_rbac.py
Backend/tests/: conftest.py  fakes.py  test_add_contact.py  test_audit.py  test_auth.py  test_auth_account_service.py  test_auth_salted.py  test_auth_schemas.py  test_change_password_identity.py  test_email_brevo.py  test_email_sender.py  test_email_smtp2go.py  test_forgot_password.py  test_google_sso.py  test_google_verifier.py  test_identity_models.py  test_identity_repository.py  test_line_sso.py  test_line_verifier.py  test_link_google.py  test_link_line.py  test_login_identity.py  test_map.py  test_normalize.py  test_onboarding_gate.py  test_rate_limit.py  test_rbac.py  test_readyz.py  test_register_flow.py  test_salt_identity.py  test_security.py  test_session_repository.py  test_session_security.py  test_set_password.py  test_sms_sender.py  test_verification_repository.py
System_Design/: .gitignore  .gitkeep  README.md  pyproject.toml
System_Design/.claude/: CLAUDE.md
System_Design/docs/: GETTING-STARTED.md  TODO.md
System_Design/editor/: pytest.ini  server.py
System_Design/exports/: mindmap.html  mindmap_dark.html  mindmap_source.md
System_Design/mindmap/: README.md
System_Design/scripts/: export_mindmap.py
(+481 files in other folders)
