[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "geoalchemy2>=0.18.1",
    "greenlet>=3.3.1",
    "h3>=4.4.1",
    "line-bot-sdk>=3.21.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.45",
    "strawberry-graphql[fastapi]>=0.288.2",
    "uvicorn>=0.40.0",
    "pyrate-limiter>=4.1.0",
    "fastapi-limiter>=0.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
