[project]
name = "mindmap-2-md"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "claude-agent-sdk>=0.1.14",
    "fastapi>=0.124.0",
    "markdown>=3.10",
    "uvicorn>=0.38.0",
    "weasyprint>=67.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-playwright>=0.7.2",
]
